# libglaswegian

./: .gitignore  LICENSE  README.md  libglaswegian.cabal  shell.nix
cbits/: ghc_cleanup.c  ghc_init.c
include/: glaswegian++.h  glaswegian.h
src/: Glaswegian.hs
test/: main.c  main.cc
