cabal-version:       2.2

name:                libglaswegian
version:             0.1.0.0
synopsis:            Use GHC's memory allocator from C.
description:         Use GHC's memory allocator from C.
homepage:            https://github.com/TravisWhitaker/libglaswegian
bug-reports:         https://github.com/TravisWhitaker/libglaswegian/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2020
category:            System
extra-source-files:  CHANGELOG.md, README.md

foreign-library glaswegian
  type:                native-shared
  -- options:             standalone
  other-modules:       Glaswegian
  build-depends:       base ^>=4.13.0.0
                     , containers
                     , primitive
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits/ghc_init.c
                       cbits/ghc_cleanup.c
  include-dirs:        include
  install-includes:    glaswegian.h
  ghc-options:         -O2
                       -threaded
                       -Wall
                       -Widentities
                       -Wredundant-constraints
                       -Wcompat
                       -Wno-type-defaults
                       -Wno-unused-local-binds
                       -Wno-unused-do-bind
                       -Wno-unused-matches
                       -Werror
                       -threaded
  if (os(darwin))
    ghc-options: -optP-Wno-nonportable-include-path
